// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input.Password /> Snapshots should match with default input 1`] = `
.c3 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  position: absolute;
  bottom: 0;
  left: 0;
  border: none;
  box-sizing: border-box;
  height: 52px;
  padding-top: 16px;
  padding-right: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
}

.c3:focus {
  color: #231B22;
}

.c3:focus ~ legend {
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  -webkit-transition-property: max-width;
  transition-property: max-width;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
}

.c3:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size,color;
  -webkit-transition-property: transform,font-size,color;
  transition-property: transform,font-size,color;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  font-weight: 400;
  color: #231B22;
}

.c3:focus::-webkit-input-placeholder {
  color: #6B6B78;
}

.c3:focus::-moz-placeholder {
  color: #6B6B78;
}

.c3:focus:-ms-input-placeholder {
  color: #6B6B78;
}

.c3:focus::placeholder {
  color: #6B6B78;
}

.c3:disabled {
  cursor: not-allowed;
  color: #D7D7E0;
  -webkit-text-fill-color: #D7D7E0;
  opacity: 1;
}

.c3::-webkit-input-placeholder {
  color: #6B6B78;
}

.c3::-moz-placeholder {
  color: #6B6B78;
}

.c3:-ms-input-placeholder {
  color: #6B6B78;
}

.c3::placeholder {
  color: #6B6B78;
}

.c3[type="number"]::-webkit-outer-spin-button,
.c3[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c3:invalid {
  box-shadow: none;
}

.c2 {
  position: relative;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  width: 320px;
  height: 52px;
  padding-left: 12px;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
}

.c2:hover:not(:disabled),
.c2:focus-within:not(:disabled) {
  border-color: #231B22;
}

.c6 {
  position: relative;
  padding: 0;
  max-width: 0;
  width: auto;
  height: 0;
  font-weight: normal;
  visibility: hidden;
  -webkit-transition-property: max-width,padding;
  transition-property: max-width,padding;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
}

.c7 {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c1 {
  box-sizing: border-box;
  width: 320px;
}

.c4 {
  padding-right: 40px;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c8 {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  cursor: pointer;
  outline: none;
}

.c8:hover svg,
.c8:focus svg {
  fill: #231B22;
}

.c8 svg {
  height: 52px;
  width: 20px;
  fill: #6B6B78;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <fieldset
        class="c2"
        label="Label"
        value=""
      >
        <input
          class="c3 c4"
          label="Label"
          type="password"
          value=""
        />
        <label
          class="c5"
        >
          Label
        </label>
        <legend
          class="c6"
        >
          <span
            class="c7"
          >
            Label
          </span>
        </legend>
      </fieldset>
    </div>
    <div
      class="c8"
      role="button"
      tabindex="0"
    >
      <svg
        height="20"
        width="20"
      />
    </div>
  </div>
</div>
`;

exports[`<Input.Password /> Snapshots should match with disabled input 1`] = `
.c3 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  position: absolute;
  bottom: 0;
  left: 0;
  border: none;
  box-sizing: border-box;
  height: 52px;
  padding-top: 16px;
  padding-right: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
}

.c3:focus {
  color: #231B22;
}

.c3:focus ~ legend {
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  -webkit-transition-property: max-width;
  transition-property: max-width;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
}

.c3:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size,color;
  -webkit-transition-property: transform,font-size,color;
  transition-property: transform,font-size,color;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  font-weight: 400;
  color: #231B22;
}

.c3:focus::-webkit-input-placeholder {
  color: #6B6B78;
}

.c3:focus::-moz-placeholder {
  color: #6B6B78;
}

.c3:focus:-ms-input-placeholder {
  color: #6B6B78;
}

.c3:focus::placeholder {
  color: #6B6B78;
}

.c3:disabled {
  cursor: not-allowed;
  color: #D7D7E0;
  -webkit-text-fill-color: #D7D7E0;
  opacity: 1;
}

.c3::-webkit-input-placeholder {
  color: #6B6B78;
}

.c3::-moz-placeholder {
  color: #6B6B78;
}

.c3:-ms-input-placeholder {
  color: #6B6B78;
}

.c3::placeholder {
  color: #6B6B78;
}

.c3[type="number"]::-webkit-outer-spin-button,
.c3[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c3:invalid {
  box-shadow: none;
}

.c2 {
  position: relative;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  width: 320px;
  height: 52px;
  padding-left: 12px;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
  border-color: #D7D7E0;
}

.c2:hover:not(:disabled),
.c2:focus-within:not(:disabled) {
  border-color: #231B22;
}

.c6 {
  position: relative;
  padding: 0;
  max-width: 0;
  width: auto;
  height: 0;
  font-weight: normal;
  visibility: hidden;
  -webkit-transition-property: max-width,padding;
  transition-property: max-width,padding;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
}

.c7 {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  color: #D7D7E0;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
}

.c4 {
  padding-right: 40px;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c8 {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  cursor: pointer;
  outline: none;
  cursor: not-allowed;
  pointer-events: none;
}

.c8:hover svg,
.c8:focus svg {
  fill: #231B22;
}

.c8 svg {
  height: 52px;
  width: 20px;
  fill: #6B6B78;
  fill: #F5F5FA;
  pointer-events: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <fieldset
        class="c2"
        disabled=""
        label="Label"
        value=""
      >
        <input
          class="c3 c4"
          disabled=""
          label="Label"
          type="password"
          value=""
        />
        <label
          class="c5"
          disabled=""
        >
          Label
        </label>
        <legend
          class="c6"
        >
          <span
            class="c7"
          >
            Label
          </span>
        </legend>
      </fieldset>
    </div>
    <div
      class="c8"
      disabled=""
      role="button"
    >
      <svg
        height="20"
        width="20"
      />
    </div>
  </div>
</div>
`;

exports[`<Input.Password /> Snapshots should match with full width 1`] = `
.c3 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  position: absolute;
  bottom: 0;
  left: 0;
  border: none;
  box-sizing: border-box;
  height: 52px;
  padding-top: 16px;
  padding-right: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
}

.c3:focus {
  color: #231B22;
}

.c3:focus ~ legend {
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  -webkit-transition-property: max-width;
  transition-property: max-width;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
}

.c3:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size,color;
  -webkit-transition-property: transform,font-size,color;
  transition-property: transform,font-size,color;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  font-weight: 400;
  color: #231B22;
}

.c3:focus::-webkit-input-placeholder {
  color: #6B6B78;
}

.c3:focus::-moz-placeholder {
  color: #6B6B78;
}

.c3:focus:-ms-input-placeholder {
  color: #6B6B78;
}

.c3:focus::placeholder {
  color: #6B6B78;
}

.c3:disabled {
  cursor: not-allowed;
  color: #D7D7E0;
  -webkit-text-fill-color: #D7D7E0;
  opacity: 1;
}

.c3::-webkit-input-placeholder {
  color: #6B6B78;
}

.c3::-moz-placeholder {
  color: #6B6B78;
}

.c3:-ms-input-placeholder {
  color: #6B6B78;
}

.c3::placeholder {
  color: #6B6B78;
}

.c3[type="number"]::-webkit-outer-spin-button,
.c3[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c3:invalid {
  box-shadow: none;
}

.c2 {
  position: relative;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  width: 100%;
  height: 52px;
  padding-left: 12px;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
}

.c2:hover:not(:disabled),
.c2:focus-within:not(:disabled) {
  border-color: #231B22;
}

.c6 {
  position: relative;
  padding: 0;
  max-width: 0;
  width: auto;
  height: 0;
  font-weight: normal;
  visibility: hidden;
  -webkit-transition-property: max-width,padding;
  transition-property: max-width,padding;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
}

.c7 {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c1 {
  box-sizing: border-box;
  width: 100%;
}

.c4 {
  padding-right: 40px;
}

.c0 {
  position: relative;
  display: inline-block;
  width: 100%;
}

.c8 {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  cursor: pointer;
  outline: none;
}

.c8:hover svg,
.c8:focus svg {
  fill: #231B22;
}

.c8 svg {
  height: 52px;
  width: 20px;
  fill: #6B6B78;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <fieldset
        class="c2"
        label="Label"
        value=""
      >
        <input
          class="c3 c4"
          label="Label"
          type="password"
          value=""
        />
        <label
          class="c5"
        >
          Label
        </label>
        <legend
          class="c6"
        >
          <span
            class="c7"
          >
            Label
          </span>
        </legend>
      </fieldset>
    </div>
    <div
      class="c8"
      role="button"
      tabindex="0"
    >
      <svg
        height="20"
        width="20"
      />
    </div>
  </div>
</div>
`;
